# home-credit-risk

./: .dockerignore  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  appspec.yml  docker-compose.yml  model_2022-04-17 23:15:04.113636.joblib  notebooks.md  pyproject.toml  setup.py
.circleci/: config.yml
notebooks/: .~03_naive_model.ipynb  01_data_io.ipynb  02_eda.ipynb  02_eda_bureau-Copy1.ipynb  03_naive_model.ipynb  applications.csv  data_io.ipynb  hello_world.html  redshift.ipynb
plots/: 0_barh_gender_credit_amount.html  0_barh_loan_type.html  0_missing_pct.html  0_pie_default.html  1_age.html  1_days_registration.html  1_default_education_annuity_ratio.html  1_documents_corr.html  1_family.html  1_loan_type_credit_income_ratio_bin.html  1_loan_type_income_bin.html  1_loan_types_occupation.html  1_months_employed_less_year.html  2_amt_credit_bins.html  2_credit_amount_bins.html  hello.html
setup/: dev-setup.sh
src/: __init__.py  config.py  data_io.py  data_loader.py  entrypoint.py  home_credit_risk.py  logger.py  serialization.py  train.py
src/api/: __init__.py  main.py  schemas.py
src/data/: agreggators.py  data_loader.py  features.py  load.py  pipeline.py  target.py  training_data.py  transformers.py
src/modelling/: estimator.py  utils.py
src/serialization/: s3.py  serialization.py  serializers.py  utils.py
tests/: conftest.py
tests/unit_tests/: test_api.py
